updated author list
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6306 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/combined/combined.tex
+++ b/2012/3papers/combined/combined.tex
@@ -1,11 +1,11 @@
 \documentclass[doublecol]{../macros/epl2} 
 % or \documentclass[page-classic]{epl2} for one column style
 
-\title{Luminosity independent measurements of total, elastic and inelastic cross-sections at $\sqrt s = 7\,\rm TeV$}
+\title{Luminosity independent measurements of total, elastic and inelastic cross-sections at $\sqrt s$ = 7\,TeV}
 %\shorttitle{Title} %Insert here a short version of the title if it exceeds 70 characters
 
 \author{
-The TOTEM Collaboration -- !! PRELIMINARY !!\\
+The TOTEM Collaboration\\
 G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}\addtocounter{footnote}{-1}
 %\addtocounter{footnote}
 \and P.~Aspell\inst{8}
@@ -37,8 +37,7 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
  \and L.~Grzanka\inst{8}\hspace{-0.15cm}\thanks{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}\addtocounter{footnote}{-2}
  \and J.~Heino\inst{3a}
  \and T.~Hilden\inst{3a,3b}
- \and M.~R.~Intonti\inst{5a}
-%\and M.~Janda\inst{1b}
+ \and R.~A.~Intonti\inst{5a}
  \and J.~Ka\v{s}par\inst{1a,8}
  \and J.~Kopal\inst{1a,8}
  \and V.~Kundr\'{a}t\inst{1a}
@@ -53,17 +52,12 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
  \and M.~Lo~Vetere\inst{6b,6a}
  \and F.~Lucas~Rodr\'{i}guez\inst{8}
  \and M.~Macr\'{\i}\inst{6a}
- \and L.~Magaletti\inst{5b,5a}
-%\and G.~Magazz\`{u}\inst{7a}
  \and T.~M\"aki\inst{3a}
  \and A.~Mercadante\inst{5b,5a}
-%\and M.~Meucci\inst7b
  \and N.~Minafra\inst{8} 
  \and S.~Minutoli\inst{6a}\addtocounter{footnote}{1}
  \and F.~Nemes\inst{4}\hspace{-0.15cm}\thanks{Department of Atomic Physics, ELTE University, Hungary.}
  \and H.~Niewiadomski\inst{8}
-%\and E.~Noschis\inst{8}
-%\and T.~Nov\'{a}k\inst{4}\thanks{KRF,  Gy\"{o}ngy\"{o}s, Hungary}
  \and E.~Oliveri\inst{7b}
  \and F.~Oljemark\inst{3a,3b}
  \and R.~Orava\inst{3a,3b}
@@ -79,9 +73,9 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
  \and L.~Ropelewski\inst{8}
  \and G.~Ruggiero\inst{8}
  \and H.~Saarikko\inst{3a,3b}
-% \and G.~Sanguinetti\inst{7a}
  \and A.~Santroni\inst{6b,6a}
  \and A.~Scribano\inst{7b}
+ \and J.~Smajek\inst{8}
  \and W.~Snoeys\inst{8}
  \and J.~Sziklai\inst{4}
  \and C.~Taylor\inst{9}
@@ -90,9 +84,10 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
  \and M.~Vitek\inst{1b}
  \and J.~Welti\inst{3a,3b}
  \and J.~Whitmore\inst{10}
- }          %ends author list
+}
+
 \shortauthor{The TOTEM Collaboration (G.~Antchev \etal)}
-%\vspace{0.5cm}
+
 \institute{
 \inst{1a}{Institute of Physics of the Academy of Sciences of the Czech Republic, Praha, Czech Republic.}\\
 \inst{1b}{Czech Technical University, Praha, Czech Republic.}\\
@@ -110,7 +105,6 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 \inst{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}\\
 \inst{10}{Penn State University, Dept. of Physics, University Park, PA, USA.}\\
 }
-
 
 \pacs{13.60.Hb}{Total and inclusive cross sections (including deep-inelastic processes)}
 
