all comments implemented
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6313 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/elastic/elastic.tex
+++ b/2012/3papers/elastic/elastic.tex
@@ -85,6 +85,7 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
  \and J.~Welti\inst{3a,3b}
  \and J.~Whitmore\inst{10}
 }
+
 \shortauthor{The TOTEM Collaboration (G.~Antchev \etal)}
 
 \institute{
@@ -135,18 +136,16 @@ For model comparisons the $t$-distributions are tabulated including the large $|
 %--------------------------------------------------
 \section{Introduction}
 
-The study of elastic proton-proton scattering reveals many aspects about the structure of the proton, its shape and opacity, i.e.~matter density. It also tests the interplay of non-perturbative and perturbative $\rm pp$ interactions depending on the four-momentum transfer squared $t$ involved in the scattering process.
+The study of elastic proton-proton scattering reveals many aspects about the structure of the proton, its shape and opacity, i.e.~matter density. It also tests the interplay of non-perturbative and perturbative regimes of $\rm pp$ interactions depending on the four-momentum transfer squared $t$ involved in the scattering process.
 % ($t = (p_{\rm i} - p_{\rm f})^2$ with $p_{\rm i,f}$  being the initial and final four-momentum, respectively). 
 
-In several runs with different beam optics, TOTEM has measured at the center-of-mass energy of $7\un{TeV}$ the differential elastic cross-section $\d\sigma/\d t$ over a wide range of $t$. The first measurement, reported by the TOTEM collaboration \cite{epl95}, extended over the $|t|$-range from $0.36 \hbox{ to } 2.5\un{GeV^2}$. These data were taken with the standard 2010 LHC beam optics (with the betatron value at the intersection point $\beta^*$ of $3.5\un{m}$). The differential cross-section $\d\sigma/\d t$ exhibited an exponential decay at low $|t|$ followed by a significant diffractive minimum and at larger $|t|$-values a behavior compatible with the power law already observed at lower energies (see references 1 to 11 in \cite{epl95}).
+In several runs with different beam optics, TOTEM has measured at the center-of-mass energy of $7\un{TeV}$ the differential elastic cross-section $\d\sigma/\d t$ over a wide range of $t$. The first measurement, reported by the TOTEM collaboration \cite{epl95}, extended over the $|t|$-range from $0.36 \hbox{ to } 2.5\un{GeV^2}$. These data were taken with the standard 2010 LHC beam optics (with the betatron value at the intersection point $\beta^*$ of $3.5\un{m}$). The differential cross-section $\d\sigma/\d t$ exhibited an exponential decay at low $|t|$ followed by a significant diffractive minimum at $|t|=0.58\un{GeV^2}$ and at larger $|t|$-values a behavior compatible with the power law already observed at lower energies (see references 1 to 11 in \cite{epl95}).
 
-To access smaller $|t|$-values (at $\sqrt s = 7\un{TeV}$ $|t| = 0.01\un{GeV^2}$ corresponds to a scattering angle of $\approx 29\un{\mu rad}$) the colliding beams must have a beam divergence of a few micro-radians. This can be obtained by either reducing the beam emittance $\epsilon$ or by increasing the betatron value $\beta^*$ (beam divergence $=\sqrt{\epsilon/\beta^*}$). With a dedicated beam optics configuration ($\beta^* = 90\un{m}$) in a special run, TOTEM extended the measurement to $|t|$-values as low as $2\cdot10^{-2}\un{GeV^2}$ \cite{epl96}. This made the extrapolation of the differential cross-section to the optical point at $t=0$ possible and enabled, for the first time at the LHC, the determination of the elastic scattering cross-section as well as the total cross-section via the optical theorem.
+To access smaller $|t|$-values (at $\sqrt s = 7\un{TeV}$ $|t| = 0.01\un{GeV^2}$ corresponds to a scattering angle of $\approx 29\un{\mu rad}$) the colliding beams must have a beam divergence of a few micro-radians. This can be obtained by either increasing the betatron value $\beta^*$ or by reducing the beam emittance $\epsilon$ (beam divergence $=\sqrt{\epsilon/\beta^*}$). With a dedicated beam optics configuration ($\beta^* = 90\un{m}$), TOTEM extended the measurement to $|t|$-values as low as $2\cdot10^{-2}\un{GeV^2}$ \cite{epl96}. This made the extrapolation of the differential cross-section to the optical point at $t=0$ possible and enabled, for the first time at the LHC, the determination of the elastic scattering cross-section as well as the total cross-section via the optical theorem.
 
-In this paper, we concentrate on an improved $t$-distribution measurement with higher statistics and reaching even smaller $|t|$-values using different data sets taken in October 2011, with several special runs at $\beta^* = 90\un{m}$. This time, the detectors, housed in Roman Pots (RP), were put aggressively close to the beam center: $4.8 \hbox{ to } 6.5$ times the transverse beam size $\sigma_{\rm beam}$. This was possible since in this run the beams were scraped by the LHC collimators at a distance of $4\,\sigma_{\rm beam}$ for RP alignment purposes. For the definition of their position, each Roman Pot had to touch this sharp beam edge. After retraction by $0.5$ to $2\,\sigma_{\rm beam}$, TOTEM took data in very clean conditions with only a few colliding bunch pairs and reached $|t|$ values down to $5\cdot10^{-3}\un{GeV^2}$, enabling the observation of $91\%$ of the elastic cross-section -- compared to only $67\%$ previously \cite{epl96}. By extrapolating the differential elastic cross-section to the optical point $t=0$ and using the optical theorem, the total and inelastic cross-sections were also derived. The differential cross-section over the complete $t$-range combining all available measurements with its statistical and systematic uncertainties is tabulated in this article.
+In this paper, we concentrate on an improved $t$-distribution measurement with higher statistics and reaching even smaller $|t|$-values using different data sets taken in October 2011, with several special runs at $\beta^* = 90\un{m}$. This time, the detectors, housed in Roman Pots (RP), were put very close to the beam center: $4.8 \hbox{ to } 6.5$ times the transverse beam size $\sigma_{\rm beam}$. This was possible since in this run the beams were scraped by the LHC collimators at a distance of $4\,\sigma_{\rm beam}$ for RP alignment purposes. For the definition of their position, each Roman Pot had to touch this sharp beam edge. After retraction by $0.5$ to $2\,\sigma_{\rm beam}$, TOTEM took data in very clean conditions with only a few colliding bunch pairs and reached $|t|$ values down to $5\cdot10^{-3}\un{GeV^2}$, enabling the observation of $91\%$ of the elastic cross-section -- compared to only $67\%$ previously \cite{epl96}. By extrapolating the differential elastic cross-section to the optical point $t=0$ and using the optical theorem, the total and inelastic cross-sections were also derived. The differential cross-section over the complete $t$-range combining all available measurements with its statistical and systematic uncertainties is tabulated in this article.
 
-In a second paper in the same journal issue \cite{P2}, the inelastic cross-section is measured directly, based on triggers from the forward inelastic detectors. This is compared to the inelastic cross-section obtained from elastic scattering via the optical theorem, yielding a cross-section estimate for single diffraction at masses below $3\un{GeV}$ that escape our detection.
-
-A third paper \cite{P3} summarizes the cross-sections obtained with different approaches, including the luminosity independent method. Since the $\rho$ parameter (the ratio of the real to imaginary part of the hadronic scattering amplitude at $t=0$) does not enter in the method of the 2nd paper \cite{P2}, $\rho$ can be determined by comparing the results from the different methods. Furthermore, the luminosity of the LHC was extracted, confirming the more detector-dependent estimates by CMS. 
+In the same journal issue, a direct inelastic cross-section measurement, based on triggers from the forward inelastic detectors, is reported \cite{P2}. This is compared to the inelastic cross-section obtained from elastic scattering via the optical theorem, yielding a cross-section estimate for single diffraction at masses below $3\un{GeV}$ that escape our detection. Another report \cite{P3} summarizes the cross-sections obtained with different approaches, including the luminosity independent method. Since the $\rho$ parameter (the ratio of the real to imaginary part of the hadronic scattering amplitude at $t=0$) does not enter in the method from Ref.~\cite{P2}, $\rho$ can be determined by comparing the results from the different methods. Furthermore, the luminosity of the LHC was extracted, confirming the more detector-dependent estimates by CMS. 
 
 
 
@@ -161,7 +160,7 @@ Each RP station is composed of two units (near and far) separated by a distance 
 %The RPs are moved from the garage position towards the beam center with a precision of $20\un{\mu m}$.
 The movement and the alignment of all pots are monitored with a precision better than $20\un{\mu m}$ based on track reconstruction and external alignment tools.
 
-The large lever arm between the near and the far units allows the determination of the scattering angle in both projections with a precision of about $5\un{\mu rad}$. The know\-ledge of both the track positions and angles is vital in the analysis. 
+The large lever arm between the near and the far units allows the determination of the track angle in both projections with a precision of about $5\un{\mu rad}$. The know\-ledge of both the track positions and angles is vital in the analysis. 
 
 
 
@@ -227,7 +226,7 @@ The analysis is very similar to the previous one \cite{epl96}. Here, we take adv
 %-------------------------
 \subsection{Alignment}
 
-Three complementary methods were applied \cite{jan_thesis}. First, the RP position was roughly determined from the beam-based alignment \cite{mario_ipac_2011}. Second, proton tracks passing through the overlap between vertical and horizontal RPs were used to determine the relative alignment among the RPs of each unit. Third, since the elastic event tagging does not require precise alignment, an alignment fine-tuning was performed on a sample obtained from an elastic pre-selection. By exploiting the azimuthal symmetry of elastic scattering%
+Three complementary methods were applied \cite{jan_thesis}. First, the RP position was roughly determined from the beam-based alignment \cite{mario_ipac_2011}. Second, proton tracks passing through the overlap between vertical and horizontal RPs were used to determine the relative alignment among the RPs of each unit. Third, since the elastic event tagging does not require precise alignment, an alignment fine-tuning was performed on a sample obtained from an elastic pre-selection (see next paragraph). By exploiting the azimuthal symmetry of elastic scattering%
 %and taking advantage of the very small effective length $L_x$
 , the horizontal and vertical shifts and the tilt of each unit could be adjusted. The effect of residual misalignments on $\d\sigma_{\rm el}/\d t$ was thus smaller than $0.3\%$ for every $t$-bin.
 
@@ -236,7 +235,7 @@ Three complementary methods were applied \cite{jan_thesis}. First, the RP positi
 \subsection{Elastic tagging}
 
 The cuts used to select the elastic events are summarized in Tab.~\ref{tab:cuts}. Cuts 1 and 2 require the reconstructed-track collinearity between the left and right arm. Cuts 3 to 6 effectively work as low-$\xi$ cuts ($\xi$ being the fractional momentum loss of a proton).
-Cuts 3 and 4: if $\xi\neq 0$, the vertex reconstruction Eq.~(\ref{eq:vertex reconstruction}) becomes invalid.
+Cuts 3 and 4: if $\xi\neq 0$, the vertex reconstruction in Eq.~(\ref{eq:vertex reconstruction}) becomes invalid.
 Cuts 5 and 6: if $\xi\neq 0$, the correlation between the track position ($y^{\rm N}$) and the track angle (proportional to $y^{\rm F} - y^{\rm N}$) is lost. Cut 7 compares the horizontal vertex position reconstructed from the left and right arms. It is the strongest single cut and is very effective against the beam-halo background, see Fig.~\ref{fig:hit dist}.
 
 \begin{table}
@@ -256,6 +255,7 @@ diagonal &\multispan2 \hss track reconstructed in all 4 diagonal RPs \hss \cr
 7 & $x^{*\rm R} - x^{*\rm L}$					& $9\un{\mu m}$ 	\cr\hline
 \end{tabular}
 \end{center}
+\vskip-6.4mm
 \end{table}
 
 
@@ -297,7 +297,7 @@ The efficiency of the RP trigger was estimated using the zero-bias data stream. 
 
 The DAQ inefficiency (dead time) was determined by comparing the numbers of triggered and recorded events, yielding $(1.858 \pm 0.001)\%$.
 
-There are several reasons for reconstruction inefficiency: intrinsic RP detection inefficiency of each silicon sensor, proton interactions with the material of a RP and ``pile-up'' of several protons in one event (RPs can uniquely reconstruct only one track). For the last case, the most important contribution is a coincidence of an elastic proton and a beam-halo proton, see Fig.~\ref{fig:hit dist}.
+Reconstruction inefficiencies occur due to: intrinsic RP detection inefficiency of each silicon sensor, proton interactions with the material of a RP and ``pile-up'' of several protons in one event (RPs can uniquely reconstruct only one track). For the last case, the most important contribution is a coincidence of an elastic proton and a beam-halo proton, see Fig.~\ref{fig:hit dist}.
 
 Uncorrelated inefficiencies of single RPs were studied by removing the examined RP from the selection cuts and counting the recuperated events. For this study, only cut 2 could be kept -- the others require both near and far RP measurements. The result was an inefficiency of $(1.5 \pm 0.2)\%$ for the near and $(3.0 \pm 0.2)\%$ for the far RPs. This difference can be explained by proton interactions in the near RP that affect the far RP too. This near-far correlated inefficiency was determined from data by counting events with corresponding shower signatures, yielding $(1.5\pm 0.7)\%$ (this result is confirmed by MC simulations).
 
@@ -331,6 +331,10 @@ The elastic differential cross-section was extrapolated to zero with the followi
 {\d\sigma_{\rm el}\over \d t} = \left. {\d\sigma_{\rm el}\over \d t}\right|_{t=0} \ \e^{-B|t|}\ .
 \end{equation}
 The fits were performed from the lowest accessible $|t|$ values (see $|t|_{\rm min}$ in Tab.~\ref{tab:datasets}) to $|t| = 0.2\un{GeV^2}$, with a typical $\chi^2/\hbox{n.d.f.}$ of $1.2$ -- see for example the black line in the embedded plot in Fig.~\ref{fig:dsdt}.
+
+The above parameterization is justified by the fact that the observed $|t|$-distribution is well described with a single value of the slope $B$, see Tab.~\ref{tab:B}. This means that the effects of the Coulomb-hadronic interference \cite{kklp} are smaller (in the fit range) than our experimental resolution. Therefore, within the uncertainties, the above extrapolation can be attributed to the hadronic component of the scattering amplitude and thus used in the optical theorem to calculate the total cross-section as in Eq.~(\ref{eq:si tot}).
+
+% two B definitions
 
 %-------------------------
 \section{Systematic uncertainty calculation}
@@ -386,7 +390,7 @@ $0.4$	&	$12.3\%$	& $\cdot$	& $\cdot$ 	& $12.9\%$ \cr
 \begin{center}
 \includegraphics{fig/B_s.pdf}
 \vskip-5mm
-\caption{The elastic slope $B$ (see Eq.~(\ref{eq:extrapolation})) as a function of the scattering energy $\sqrt s$.
+\caption{The elastic slope $B$ (see Eq.~(\ref{eq:extrapolation})) as a function of the scattering energy $\sqrt s$ (data from \cite{B_vs_s} use different treatments of the Coulomb-hadronic interference).
 %$\rm pp$ and $\rm \bar pp$ data from \cite{B_vs_s}.
 }
 \label{fig:B s}
@@ -409,8 +413,9 @@ $0.4$	&	$12.3\%$	& $\cdot$	& $\cdot$ 	& $12.9\%$ \cr
 \end{figure*}
 
 
+\def\TI{%
 \begin{largetable}
-\hbox{}\vskip-8.4mm
+\hbox{}\vskip-3mm
 \caption{The elastic differential cross-section determined in this analysis. Some details on the systematic uncertainty calculation can be found in Tab.~\ref{tab:systematics}, which can also be used to evaluate the correlations of the systematic uncertainties among the bins (the three contributions are independent).
 }
 \label{tab:data low t}
@@ -458,10 +463,12 @@ $0.0455\S$ & $204.8$ & $\S1.3$ & $\S8.7$ && $0.103\S$ & $\S65.53$ & $0.60$ & $2.
 \end{tabular}
 \end{center}
 \end{largetable}
+}
 
 
+\def\TII{%
 \begin{largetable}
-\hbox{}\vskip-8.4mm
+\hbox{}\vskip-3mm
 \caption{The elastic differential cross-section as given in \cite{epl95}. The systematic uncertainties are almost fully correlated among the bins.
 %systematic uncertainties evaluated for three $|t|$ values: $^{+25}_{-37}\%$ at $|t|=0.4\un{GeV^2}$, $^{+28}_{-39}\%$ at $0.5\un{GeV^2}$ and $^{+27}_{-30}\%$ at $1.5\un{GeV^2}$.
 }
@@ -509,17 +516,18 @@ $0.560$ & $0.004$ & $\S18.5$ & $0.9$ & $^{\s5.2}_{\s7.1}$  &&  $0.847$ & $0.005$
 \end{tabular}
 \end{center}
 \end{largetable}
+}
 
-
-
-\begin{table*}
-\hbox{}\vskip-9.4mm
-\caption{Result summary with detailed systematic uncertainty composition. The $t$-dependent, normalization and luminosity uncertainties correspond to those presented in Tab.~\ref{tab:systematics}. The $\rho$ uncertainty follows from the COMPETE preferred-model $\rho$ extrapolation error of $\pm 0.007$.
-The right-most column gives the full systematic uncertainty, combined in quadrature and taking into account the correlations between the contributions (e.g.~the uncertainty of $\sigma_{\rm inel}$ is suppressed due to the correlation between $\sigma_{\rm el}$ and $\d\sigma_{\rm el}/\d t|_0$).}
+\def\TR{%
+\begin{table*}[!t]
+\vskip-7mm
+\caption{Result summary with detailed uncertainty composition. The $t$-dependent, normalization and luminosity uncertainties correspond to those presented in Tab.~\ref{tab:systematics}. The $\rho$ uncertainty follows from the COMPETE preferred-model $\rho$ extrapolation error of $\pm 0.007$.
+The right-most column gives the full systematic uncertainty, combined in quadrature and considering the correlations between the contributions (e.g.~the uncertainty of $\sigma_{\rm inel}$ is suppressed due to the correlation between $\sigma_{\rm el}$ and $\d\sigma_{\rm el}/\d t|_0$).}
 \vskip-3mm
 \label{tab:results}
-\def\ColSep{5pt}
 \begin{center}
+\small
+\def\ColSep{5pt}
 \setlength{\tabcolsep}{10pt}
 \begin{tabular}{c@{\hskip10pt}clcc@{\hskip\ColSep}c@{\hskip\ColSep}c@{\hskip\ColSep}c@{\hskip\ColSep}l}\hline
 \multispan2\hss quantity\hss & value & statistical &\multispan5\hss systematic uncertainty\hss\cr
@@ -533,30 +541,41 @@ $\sigma_{\rm inel}$			& $\unt{mb}$ & $73.15$ & & $\pm 0.77$ & $\pm 0.29$ & $\pm 
 \end{center}
 \vskip-9.4mm\hbox{}%
 \end{table*}
+}
+
+\def\TB{%
+\begin{table*}
+\hbox{}\vskip-3mm
+\caption{Elastic slopes $B$ (in $\rm GeV^{-2}$) obtained from parameterization Eq.~(\ref{eq:extrapolation}) fitted through intervals $|t|_{\rm low}$ to $|t|_{\rm high}$.
+% The first uncertainty is statistical, the second systematic.
+}
+\label{tab:B}
+\small
+\begin{center}
+\vskip-2mm
+\setlength{\tabcolsep}{10pt}
+\begin{tabular}{lcc}\hline
+$|t|_{\rm low}\quad \backslash\quad \ |t|_{\rm high}$ & $0.1\un{GeV^2}$ & $0.2\un{GeV^2}$\cr\hline
+$0.005\un{GeV^2}$ & $19.96 \pm 0.04^{\rm stat} \pm 0.22^{\rm syst}$ & $19.89 \pm 0.02^{\rm stat} \pm 0.27^{\rm syst}$ \cr
+$0.020\un{GeV^2}$ & $19.93 \pm 0.05^{\rm stat} \pm 0.21^{\rm syst}$ & $19.87 \pm 0.03^{\rm stat} \pm 0.33^{\rm syst}$\cr\hline
+\end{tabular}
+\end{center}
+\end{table*}
+}
 
 
+\TI
+\TII
+\TB
+\TR
 
 %--------------------------------------------------
 \section{Results}
 
 TOTEM has taken data under various beam and background conditions, luminosities and RP detector positions. The differential elastic cross-section obtained from these different data sets  are in excellent agreement with each other. This justifies merging the data from all datasets to obtain a final result for the differential cross-sections presented in Tab.~\ref{tab:data low t}. The first two bins suffer from the lower statistics of the datasets 2 and 3. Tab.~\ref{tab:data low t} gives a representative $|t|$-value for each bin, determined according to the procedure described elsewhere \cite{lafferty94}. The relative uncertainties of the representative points turn out to be negligible ($< 10^{-4}$). Tab.~\ref{tab:data medium t} presents the $\d\sigma_{\rm el}/\d t$ continuation to higher $|t|$ values, measured in a different run with $\beta^* = 3.5\un{m}$ optics and published elsewhere \cite{epl95}. All TOTEM differential cross-section measurements are given in Fig.~\ref{fig:dsdt}.
 
-
-\begin{table}
-\caption{Elastic slopes $B$ (in $\rm GeV^{-2}$) obtained from parameterization Eq.~(\ref{eq:extrapolation}) fitted through intervals $|t|_{\rm low}$ to $|t|_{\rm high}$. The first uncertainty is statistical, the second systematic.}
-\label{tab:B}
-\begin{center}
-\setlength{\tabcolsep}{3.5pt}
-\begin{tabular}{l|cc}
-$|t|_{\rm low}\ \backslash\ \ |t|_{\rm high}$ & $0.1\un{GeV^2}$ & $0.2\un{GeV^2}$\cr\hline
-$0.005\un{GeV^2}$ & $19.96 \pm 0.04 \pm 0.22$ & $19.89 \pm 0.02 \pm 0.27$ \cr
-$0.020\un{GeV^2}$ & $19.93 \pm 0.05 \pm 0.21$ & $19.87 \pm 0.03 \pm 0.33$\cr
-\end{tabular}
-\end{center}
-\end{table}
-
-
-For $|t|$-values below $0.2\un{GeV^2}$, the differential cross-section falls exponentially with $|t|$, justifying the parameterization Eq.~(\ref{eq:extrapolation}). Due to the closer approach of the RP detectors to the beam center (see Tab.1) in these data, the minimal reachable $|t|$-value was lowered from $0.02$ of the previous measurement \cite{epl96} down to $0.005\un{GeV^2}$. However, the exponential slope $B$ of the differential elastic cross-section stayed unchanged in this newly explored $|t|$-region. As presented in Tab.~\ref{tab:B}, the slope does not change with the chosen fit intervals. Consequently, the exponential dependence can be fitted over the large $|t|$-interval from $0.005$ to $0.2\un{GeV^2}$ resulting in a high precision determination of $B$. Compared to previous collider experiments at lower energies (Fig.~\ref{fig:B s}), $B$ rises steadily with the collision energy $\sqrt s$. In a geometrical picture, this shrinking of the differential distribution with energy is interpreted as an increase of the proton size leading to the rise of the total cross-section with energy.
+For $|t|$-values below $0.2\un{GeV^2}$, the differential cross-section falls exponentially with $|t|$, as expressed in Eq.~(\ref{eq:extrapolation}). Due to the closer approach of the RP detectors to the beam center (see Tab.~\ref{tab:datasets}) in these data, the minimal reachable $|t|$-value was lowered from $0.02$ of the previous measurement \cite{epl96} down to $0.005\un{GeV^2}$. However, the exponential slope $B$ of the differential elastic cross-section stayed unchanged in this newly explored $|t|$-region. As presented in Tab.~\ref{tab:B}, the slope does not change with the chosen fit intervals. Consequently, the exponential dependence can be fitted over the large $|t|$-interval from $0.005$ to $0.2\un{GeV^2}$ resulting in a high precision determination of $B$. Compared to previous collider experiments at lower energies (Fig.~\ref{fig:B s}), $B$ rises steadily with the collision energy $\sqrt s$.
+%In a geometrical picture, this shrinking of the differential distribution with energy is interpreted as an increase of the proton size leading to the rise of the total cross-section with energy.
 
 In order to derive the elastic and total cross-sections, the extrapolation to the optical point $t=0$ was performed (see Eq.~(\ref{eq:extrapolation})). The fact that $91\%$ of the elastic cross-section was visible, gives high confidence to the derived cross-sections, all summarized in Tab.~\ref{tab:results} with their statistical and systematic uncertainties. The elastic data were integrated up to $|t| = 0.415\un{GeV^2}$, where the effect of the larger $|t|$-contributions is small compared to the other uncertainties. The optical theorem can be used to calculate the total and inelastic cross-sections:
 \begin{equation}
@@ -574,18 +593,22 @@ For the $\rho$ parameter the COMPETE \cite{compete} preferred-model extrapolatio
 %--------------------------------------------------
 \section{Outlook}
 
-The above measurements will be repeated this year at the higher energy of $\sqrt s = 8\un{TeV}$. Furthermore, in the spirit of the $90\un{m}$ optics, a larger $\beta^*$ optics ($\beta^* = 500$ to $1000\un{m}$) is presently under development. If still used this year at the energy of $\sqrt s = 8\un{TeV}$, minimum reachable $|t|$-values around  $5\cdot 10^{-4}\un{GeV^2}$ (where Coulomb and nuclear cross-sections are about equal) will allow the study of the Coulomb-nuclear interference and consequently the determination of the $\rho$ parameter. Likewise, measurements of large $|t|$ elastic scattering are under study. Cross-section measurements that are either $\rho$ or luminosity independent are the subject of the following papers.
+The above measurements will be repeated this year at the higher energy of $\sqrt s = 8\un{TeV}$. Furthermore, in the spirit of the $90\un{m}$ optics, a larger $\beta^*$ optics ($\beta^* = 500$ to $1000\un{m}$) is presently under development. If still used this year at the energy of $\sqrt s = 8\un{TeV}$, minimum reachable $|t|$-values around  $5\cdot 10^{-4}\un{GeV^2}$ (where Coulomb and hadronic contributions to the differential cross-sections are about equal) will allow the study of the Coulomb-hadronic interference and consequently the determination of the $\rho$ parameter. Likewise, measurements of large $|t|$ elastic scattering are under study. Such measurements might reveal further diffractive minima as predicted by some phenomenological models.
+%Cross-section measurements that are either $\rho$ or luminosity independent are the subject of the following papers.
 
 
 
 %--------------------------------------------------
+\vskip-2mm
 \acknowledgments
+\vskip-2mm
 
 We are indebted to the beam optics development team ({\sc A.~Verdier} in the initial phase, {\sc H.~Burkhardt}, {\sc G.~M\" uller}, {\sc S.~Redaelli}, {\sc J.~Wenninger}, {\sc S.~White}) for the design, the thorough preparations and the successful commissioning of the $\beta^* = 90\un{m}$ optics. We congratulate the CERN accelerator groups for the very smooth operation in 2011. We thank {\sc M.~Ferro-Luzzi} and the LHC machine coordinators for scheduling the dedicated fills.
 
 
 
 %--------------------------------------------------
+\vskip-2mm
 \begin{thebibliography}{0}
 
 % initials after
@@ -625,22 +648,26 @@ We are indebted to the beam optics development team ({\sc A.~Verdier} in the ini
 	%{\tt http://accelconf.web.cern.ch/AccelConf/IPAC2011/papers/mopo011.pdf}
 	arXiv:1110.5808v1
 
+\bibitem{kklp}	
+	\Name{Ka\v spar, J.~\etal}
+	\REVIEW{Nucl.~Phys.}{B843}{2011}{84}
+
 %\bibitem{pdg} 
 %	\Name{Nakamura K.~\etal{} (Particle Data Group)}
 %	\REVIEW{J.~Phys.}{G37}{2010}{075021}
 
 \bibitem{B_vs_s}
-	\Name{ISR (CR Collaboration)} \REVIEW{Phys.~Lett.}{B36}{1971}{504}\\
-	\Name{ISR (ACHGT Collaboration)} \REVIEW{Phys.~Lett.}{B39}{1972}{663}\\
-	\Name{ISR (R-211)} \REVIEW{Nucl.~Phys.}{B262}{1985}{689--714}\\
-	\Name{ISR (R-210)} \REVIEW{Phys.~Lett.}{B115}{1982}{495}\\
-	\Name{UA1} \REVIEW{Phys.~Lett.}{B147}{1984}{385--391}\\
-	\Name{UA4} \REVIEW{Phys.~Lett.}{B127}{1983}{472} and \REVIEW{Phys. Lett.}{B198}{1987}{583--589}\\
-	\Name{UA4/2} \REVIEW{Phys.~Lett.}{B316}{1993}{448--454}\\
-	\Name{CDF} \REVIEW{Phys.~Rev.}{D50}{1994}{5518–5534} \\
-	\Name{E710} \REVIEW{Phys.~Lett.}{B247}{1990}{127--130} and \REVIEW{Nuovo Cimento}{A106}{1992}{123--129}\\
-	\Name{D0} D0 Note 6056-CONF\\
-	\Name{pp2pp} \REVIEW{Phys.~Lett.}{B579}{2004}{245-250}
+	\Name{ISR (CR Collaboration)} \REVIEW{Phys.~Lett.}{B62}{1976}{460}; 
+	\Name{ISR (ACHGT Collaboration)} \REVIEW{Phys.~Lett.}{B39}{1972}{663}; 
+	\Name{ISR (R-211)} \REVIEW{Nucl.~Phys.}{B262}{1985}{689}; 
+	\Name{ISR (R-210)} \REVIEW{Phys.~Lett.}{B115}{1982}{495}; 
+	\Name{UA1} \REVIEW{Phys.~Lett.}{B147}{1984}{385}; 
+	\Name{UA4} \REVIEW{Phys.~Lett.}{B127}{1983}{472} and \REVIEW{Phys. Lett.}{B198}{1987}{583}; 
+	\Name{UA4/2} \REVIEW{Phys.~Lett.}{B316}{1993}{448}; 
+	\Name{CDF} \REVIEW{Phys.~Rev.}{D50}{1994}{5518}; 
+	\Name{E710} \REVIEW{Phys.~Rev.~Lett.}{68}{1992}{2433} and \REVIEW{Nuovo Cimento}{A106}{1992}{123}; 
+	\Name{D0} D0 Note 6056-CONF; 
+	\Name{pp2pp} \REVIEW{Phys.~Lett.}{B579}{2004}{245}
 
 \bibitem{lafferty94}
  	%``Where to stick your data points: The treatment of measurements within wide bins,''
@@ -650,25 +677,6 @@ We are indebted to the beam optics development team ({\sc A.~Verdier} in the ini
 \bibitem{compete} 
 	\Name{Cudell~J.~R.~\etal{} (COMPETE Collaboration)}
 	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
-	
-
-
-%\bibitem{b.b}
-%  \Name{Author F. \and Author S.}
-%  \Book{Some Book of Interest}
-%  \Editor{A. Editor}
-%  \Vol{9}
-%  \Publ{Publishing house, City}
-%  \Year{1939}
-%  \Page{666}.
-%
-%\bibitem{b.c}
-%  \Editor{Editor A.}
-%  \Book{Some Book of Interest}
-%  \Vol{9}
-%  \Publ{Publishing house, City}
-%  \Year{1939}
-%  \Section{A}.
 
 \end{thebibliography}
 
